# Collaborative-Text-Editor

./: README.md
Client /: CMakeLists.txt  CancellationWindow.cpp  CancellationWindow.h  ChooseFileNameWindow.cpp  ChooseFileNameWindow.h  Client.cpp  Client.h  Editor.cpp  Editor.h  FileChoiceWindow.cpp  FileChoiceWindow.h  IconsClient.qrc  LoginWindow.cpp  LoginWindow.h  MyTextEdit.cpp  MyTextEdit.h  OpenFileWindow.cpp  OpenFileWindow.h  OtherFunctions.cpp  OtherFunctions.h  RegistrationWindow.cpp  RegistrationWindow.h  SettingsWindow.cpp  SettingsWindow.h  Symbol.cpp  Symbol.h  URIWindow.cpp  URIWindow.h  User.cpp  User.h  UserInfo.cpp  UserInfo.h  cancellationwindow.ui  choosefilenamewindow.ui  editor.ui  filechoicewindow.ui  loginwindow.ui  main.cpp  openfilewindow.ui  registrationwindow.ui  (+3 more)
Server/: CMakeLists.txt  DataBaseOperations.cpp  DataBaseOperations.h  Server.cpp  Server.h  Symbol.cpp  Symbol.h  User.cpp  User.h  main.cpp  pds_db  server.ui
Server/Files/: File1
